update cache on notebooks

--- a/test.ipynb
+++ b/test.ipynb
@@ -80,58 +80,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test\n",
-    "# Print first 5 elements of table songplays\n",
-    "cur.execute(\"select song_id, artist_id  FROM songplays WHERE artist_id IS NOT NULL;\")\n",
-    "rows = cur.fetchall()\n",
-    "for row in rows:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Intro', 76, '40 Grit')\n"
-     ]
-    }
-   ],
-   "source": [
-    "#test\n",
-    "# Print first 5 elements of table songplays\n",
-    "cur.execute(\"SELECT songs.title, songs.duration, artists.name FROM songs \\\n",
-    "                JOIN artists ON artists.artist_id = songs.artist_id \\\n",
-    "                WHERE song_id=%s;\", ('SOGDBUF12A8C140FAA',))\n",
-    "rows = cur.fetchall()\n",
-    "for row in rows:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test\n",
-    "# Print first 5 elements of table songplays\n",
-    "cur.execute(\"select song_id, artist_id  FROM songplays WHERE artist_id IS NOT NULL;\")\n",
-    "rows = cur.fetchall()\n",
-    "for row in rows:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -139,7 +87,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +134,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,18 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, 270)\n",
-      "('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 268)\n",
-      "('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, 233)\n",
-      "('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, 210)\n",
-      "('SOMJBYD12A6D4F8557', 'Keepin It Real (Skit)', 'ARD0S291187B9B7BF5', 0, 115)\n"
+      "('SOGXHEG12AB018653E', 'It Makes No Difference Now', 'AR0RCMP1187FB3F427', 1992, 133)\n",
+      "('SOBBUGU12A8C13E95D', 'Setting Fire to Sleeping Giants', 'ARMAC4T1187FB3FA4C', 2004, 208)\n",
+      "('SOYTPEP12AB0180E7B', 'Twist and Shout', 'ARAJPHH1187FB5566A', 1964, 165)\n",
+      "('SOBZBAZ12A6D4F8742', 'Spanish Grease', 'AROUOZZ1187B9ABE51', 1997, 168)\n",
+      "('SOLLHMX12AB01846DC', 'The Emperor Falls', 'AR1Y2PT1187FB5B9CE', 0, 485)\n"
      ]
     }
    ],
@@ -224,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +181,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,18 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('AR8ZCNI1187B9A069B', 'Planet P Project', None, None, None)\n",
-      "('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', None, None, None)\n",
-      "('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', None, None)\n",
-      "('ARXR32B1187FB57099', 'Gob', None, None, None)\n",
-      "('ARD0S291187B9B7BF5', 'Rated R', 'Ohio', None, None)\n"
+      "('AR0RCMP1187FB3F427', 'Billie Jo Spears', 'Beaumont, TX', 30.08615, -94.10158)\n",
+      "('ARMAC4T1187FB3FA4C', 'The Dillinger Escape Plan', 'Morris Plains, NJ', 40.82624, -74.47995)\n",
+      "('ARAJPHH1187FB5566A', 'The Shangri-Las', 'Queens, NY', 40.7038, -73.83168)\n",
+      "('AROUOZZ1187B9ABE51', 'Willie Bobo', 'New York, NY [Spanish Harlem]', 40.79195, -73.94512)\n",
+      "('AR1Y2PT1187FB5B9CE', 'John Wesley', 'Brandon', 27.94017, -82.32547)\n"
      ]
     }
    ],
@@ -271,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +228,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('SOZCTXZ12AB0182364', 'AR5KOSW1187FB35FF4')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Is there any row on songplays where artist_id is not null?\n",
+    "cur.execute(\"select song_id, artist_id  FROM songplays WHERE artist_id IS NOT NULL;\")\n",
+    "rows = cur.fetchall()\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
